samples/_failures_safe/1761186351_6d4de2_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_bb1ca984.c: In function ‘tokenize’:
./samples/SAFE/__tmp_bb1ca984.c:163:9: error: expected identifier at end of input
  163 |         tokens[token_count].
      |         ^~~~~~
./samples/SAFE/__tmp_bb1ca984.c:163:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_bb1ca984.c:163:9: error: expected declaration or statement at end of input
